--- a/src/Components/Home/Home.module.scss
+++ b/src/Components/Home/Home.module.scss
@@ -1,10 +1,37 @@
+@media only screen and (max-width:390px) {
+    .wrapper {
+        width: 100vw;
+    }
+
+    .addBlock {
+        width: 100%;
+        height: 50px;
+
+        .addBlock_item {
+            width: 17%;
+            height: 5vh;
+            border-radius: 10px;
+        }
+    }
+
+    .main {
+        width: 100%;
+
+        .items_container {
+            margin-left: 30px;
+        }
+    }
+
+    .right {
+        display: none;
+    }
+
+}
+
 .wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
-    min-height: 100vh;
-    width: 80vw;
     background-color: white;
     border-radius: 20px;
     -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
@@ -20,11 +47,9 @@
 
     .items_container {
         display: flex;
-        padding: 20px;
         flex-direction: row;
         flex-wrap: wrap;
         background-color: rgb(255, 255, 255);
-        margin-left: 20px;
 
     }
 }
@@ -32,14 +57,12 @@
 .addBlock {
     display: flex;
     justify-content: space-around;
-    width: 100%;
-    height: 16vh;
+
     background-color: azure;
     border-bottom: 1px solid grey;
 
     .addBlock_item {
-        width: 17%;
-        height: 15vh;
+
         background-color: antiquewhite;
         border-radius: 10px;
 
@@ -49,15 +72,4 @@
             border-radius: 10px;
         }
     }
-}
-
-
-
-.right {
-    position: fixed;
-    top: 0;
-    right: 0px;
-    width: 20vw;
-    height: 860px;
-    background-color: rgb(247, 243, 243);
 }
