--- a/src/Components/Card/Card.module.scss
+++ b/src/Components/Card/Card.module.scss
@@ -88,47 +88,39 @@
     background-color: #fcdf00b0;
 }
 
-.addButtontoCart_active {
-    background-color: #ecece9;
-    width: 40%;
-    border-radius: 10px;
-    border: 0;
-    outline: none;
-    height: 50px;
-    font-size: 1em;
-    margin-bottom: 10px;
-    margin-left: 10px;
-}
 
 .buttonmenu {
-    margin: 10px auto;
     background-color: #ecece9;
-    width: 90%;
+    width: 95%;
     height: 10%;
     border-radius: 10px;
+    margin-left: 5px;
+    margin-top: 10px;
+
+
 
 
 }
 
 .addButtonMinus {
     background-color: #ecece9;
-    width: 45%;
+    width: 40%;
     border-radius: 10px;
     border: 0;
     outline: none;
     height: 10%;
     font-size: 1em;
-    margin-left: 10px;
 }
 
 .addButtonPlus {
     background-color: #ecece9;
-    width: 45%;
+    width: 40%;
     border-radius: 10px;
     border: 0;
     outline: none;
     height: 10%;
     font-size: 1em;
+
 }
 
 .counter {
@@ -137,12 +129,8 @@
     border: 0;
     outline: none;
     height: 10%;
-    font-size: 0.8em;
+    font-size: 0.7em;
+    padding-top: 5px;
+    padding-right: 10px;
 
-}
-
-.buttonmenu {
-    display: flex;
-    width: 90%;
-    height: 10%;
 }
