--- a/src/Components/Home/Home.module.scss
+++ b/src/Components/Home/Home.module.scss
@@ -4,12 +4,12 @@
     }
 
     .addBlock {
-        width: 100%;
-        height: 50px;
+        height: 16vh;
+        overflow: scroll;
 
         .addBlock_item {
-            width: 17%;
-            height: 5vh;
+            width: 45vw;
+            height: 14vh;
             border-radius: 10px;
         }
     }
@@ -31,7 +31,6 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    align-items: center;
     background-color: white;
     border-radius: 20px;
     -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
@@ -56,20 +55,24 @@
 
 .addBlock {
     display: flex;
-    justify-content: space-around;
 
-    background-color: azure;
-    border-bottom: 1px solid grey;
+    .addBlock_test {
+        display: flex;
+        justify-content: space-between;
+
+    }
 
     .addBlock_item {
-
         background-color: antiquewhite;
         border-radius: 10px;
+        margin-right: 30px;
 
         img {
-            width: 100%;
+            width: 50vw;
             height: 100%;
             border-radius: 10px;
         }
     }
+
+
 }
