--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,8 @@
 *::before,
 *::after {
     box-sizing: border-box;
+    border: 0;
+
 }
 
 a {
@@ -16,5 +18,4 @@ a {
 /* -----------------------------Header */
 .App {
     background-color: white;
-    width: 1920px;
 }
