--- a/src/Components/Checkout/Checkout.module.scss
+++ b/src/Components/Checkout/Checkout.module.scss
@@ -1,12 +1,24 @@
+@media only screen and (max-width:420px) {
+    .orderList {
+        flex-direction: column;
+    }
+
+    .cartitems_wrapper {
+        width: 100vw;
+
+    }
+}
+
 .wrapper_order {
     background-color: #f5f4f2;
     width: 100%;
-    height: 99vh;
-    overflow: hidden;
+    padding-right: 10px;
+
 }
 
 .orderMenu {
     display: flex;
+
 }
 
 .orderList .boxbox {
@@ -17,10 +29,8 @@
 }
 
 .orderList {
-    margin: 0 auto;
-    width: 70vw;
+    width: 100vw;
     display: flex;
-    justify-content: space-between;
 
 }
 
@@ -29,7 +39,6 @@
     flex-direction: column;
     overflow-x: scroll;
     padding: 20px;
-    width: 640px;
     height: 88vh;
     margin: 50px auto;
     border-radius: 20px;
@@ -44,6 +53,7 @@
     width: 580px;
     background-color: #ffffffc4;
     border-radius: 10px 0px 0px 10px;
+
 }
 
 .orderList .itemCart:hover {
@@ -53,8 +63,8 @@
 
 .orderDetails {
     padding: 20px;
-    width: 25vw;
-    height: 47vh;
+    width: 100vw;
+    height: 70vh;
     background-color: rgb(255, 255, 255);
     border-radius: 20px;
     -webkit-box-shadow: 1px 0px 11px 6px rgba(34, 60, 80, 0.2);
@@ -81,9 +91,9 @@
 .paymentsDetails {
     display: flex;
     flex-direction: column;
-    margin: 50px auto;
-    width: 25vw;
-    height: 35vh;
+    margin: 150px auto;
+    width: 100vw;
+    height: 60vh;
     background-color: rgb(255, 255, 255);
     border-radius: 20px;
     -webkit-box-shadow: 1px 0px 11px 6px rgba(34, 60, 80, 0.2);
