--- a/src/Components/Card/Card.module.scss
+++ b/src/Components/Card/Card.module.scss
@@ -2,40 +2,45 @@
 
 @media only screen and (max-width:420px) {
     .itemContainer {
-        width: 150px;
-        height: 220px;
+        width: 42%;
+        height: 260px;
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 10px;
 
         img {
-            height: 120px;
-            width: 159px;
+            height: 55%;
+            width: 100%;
         }
     }
 
     .itempriceline {
 
-        margin-top: 15px;
+        margin-top: 20px;
 
         .itemPrice {
-            font-size: 0.6em;
+            font-size: 0.7em;
             padding-left: 11px;
         }
 
 
         .itemWeight {
-            padding-right: 25px;
-            font-size: 0.5em;
+            padding-right: 10px;
+            font-size: 0.7em;
             color: rgba(0, 0, 0, 0.404);
         }
     }
 
     .itemnameline {
-        width: 99%;
+        width: 100%;
         height: 10%;
         padding-left: 11px;
 
 
         .itemName {
-            font-size: 0.6em;
+            font-size: 14px;
+            padding-right: 10px;
+
         }
     }
 
@@ -47,18 +52,17 @@
     flex-wrap: wrap;
     overflow: hidden;
 
-    margin-top: 15px;
+    margin-top: 20px;
     border-radius: 15px;
     background-color: white;
     -webkit-box-shadow: 0px 1px 8px 3px rgba(34, 60, 80, 0.2);
     -moz-box-shadow: 0px 1px 8px 3px rgba(34, 60, 80, 0.2);
     box-shadow: 0px 1px 8px 3px rgba(34, 60, 80, 0.2);
-    margin-right: 30px;
 
     img {
 
         border-radius: 15px 15px 2px 2px;
-        margin: 2px auto;
+        margin: 0 auto;
     }
 
 }
@@ -78,10 +82,11 @@
     border-radius: 10px;
     border: 0;
     outline: none;
-    height: 10%;
+    height: 4vh;
     font-size: 0.8em;
     margin-left: 10px;
-    margin-top: 10px;
+    margin-top: 15px;
+    color: black;
 }
 
 .addButtontoCart:hover {
@@ -90,36 +95,40 @@
 
 
 .buttonmenu {
+    display: flex;
+    height: 4vh;
     background-color: #ecece9;
-    width: 95%;
-    height: 10%;
+    width: 90%;
+    margin: 0 auto;
     border-radius: 10px;
-    margin-left: 5px;
-    margin-top: 10px;
-
-
-
-
+    margin-top: 15px;
 }
 
 .addButtonMinus {
     background-color: #ecece9;
-    width: 40%;
-    border-radius: 10px;
+    width: 44%;
     border: 0;
     outline: none;
-    height: 10%;
+    height: 4vh;
     font-size: 1em;
+    color: black;
+    text-align: center;
+    border-radius: 10px;
+
+
 }
 
 .addButtonPlus {
     background-color: #ecece9;
-    width: 40%;
-    border-radius: 10px;
+    width: 44%;
     border: 0;
     outline: none;
-    height: 10%;
+    height: 4vh;
     font-size: 1em;
+    color: black;
+    text-align: center;
+    border-radius: 10px;
+
 
 }
 
@@ -128,9 +137,10 @@
     width: 10%;
     border: 0;
     outline: none;
-    height: 10%;
-    font-size: 0.7em;
-    padding-top: 5px;
-    padding-right: 10px;
+    height: 4vh;
+    font-size: 0.9em;
+    text-align: center;
+    color: black;
+
 
 }
