--- a/src/Components/Cart/Сart.module.scss
+++ b/src/Components/Cart/Сart.module.scss
@@ -27,7 +27,7 @@
 .items_container {
     padding: 10px;
     width: 100%;
-    height: 80%;
+    height: 100%;
     overflow-x: scroll;
 }
 
@@ -47,7 +47,7 @@
 
         img {
 
-            width: 5.9vw;
+            width: 93%;
             border-radius: 10px 0px 0px 10px;
         }
     }
