--- a/src/Components/Category/Category.module.scss
+++ b/src/Components/Category/Category.module.scss
@@ -1,38 +1,16 @@
 .categoryMenu {
+    display: flex;
+    flex-direction: row;
     width: 100vw;
-    height: 30px;
+    height: 50px;
+    overflow: scroll;
     background-color: #e7e7e7;
+    padding-left: 20px;
 
-    ul {
-        overflow: scroll;
-
-        display: flex;
-
-
-
-
-        li {
-            list-style-type: none;
-            padding-top: 3px;
-            width: 120px;
-            height: 30px;
-            background-color: #e7e7e7;
-            font-size: 0.9em;
-
-
-        }
-
-        li:hover {
-            background-color: rgb(201, 200, 200);
-        }
-
-        a {
-            color: rgba(0, 0, 0, 0.753);
-        }
-
-        h2 {
-            color: black;
-        }
+    a {
+        margin-right: 50px;
+        font-size: 0.9em;
+        color: rgba(0, 0, 0, 0.521);
     }
 
 
