--- a/src/Components/Home/Home.module.scss
+++ b/src/Components/Home/Home.module.scss
@@ -28,6 +28,35 @@
         visibility: hidden;
     }
 
+    .cartMobile {
+        position: fixed;
+        z-index: 2000;
+        right: 10px;
+        bottom: 150px;
+        background-color: rgb(43, 161, 19);
+        padding: 10px;
+        border-radius: 40px;
+
+        img {
+
+            width: 40px;
+        }
+
+        span {
+            font-size: 1em;
+            position: fixed;
+            z-index: 2001;
+            right: 10px;
+            bottom: 150px;
+            background-color: rgb(255, 255, 255);
+            border-radius: 40px;
+            height: 25px;
+            width: 25px;
+            text-align: center;
+            border: 1px solid black;
+            color: black;
+        }
+    }
 }
 
 .wrapper {
